# ServerBoost

./: .gitignore  CMakeLists.txt  README.md  alias.sh  conanfile.txt  recup.cpp
src/: libraries.hpp  main a.cpp  main b.cpp  main copy try.cpp  main copy.cpp  main test.cpp  main.cpp  main_ORM.cpp
src/Connection_Managers/: ConnectionManager.hpp
src/Converters/: JSonConverter.hpp
src/Converters/JsonConverter/: JSonConverter.hpp
src/Converters/JsonToSQLCOnverterString/: JsonToSQLCOnverter.hpp
src/MySQLConnectors/: MySQLConnector.hpp
src/MySQL_orm/: Column.hpp  mysql_orm_libraries.hpp
src/MySQL_orm/Actions/: Select.hpp  SelectFilter.hpp
src/MySQL_orm/Columns/: AgeColumn.hpp  BaseColumn.hpp  BuildingColumn.hpp  Column.hpp  FirstNameColumn.hpp  GenreColumn.hpp  IdColumn.hpp  LastNameColumn.hpp  user_libraries.hpp
src/MySQL_orm/Conditions/: BaseCondition.hpp  Condition.hpp  Contain.hpp  EndWith.hpp  EqualTo.hpp  GreaterThan.hpp  LesserThan.hpp  NotContain.hpp  NotEndWith.hpp  NotEqualTo.hpp  NotStartWith.hpp  StartWith.hpp
src/MySQL_orm/Filters/: ANDFilter.hpp  Filter.hpp  ORFilter.hpp
src/MySQL_orm/Tables/: BaseTable.hpp  Table.hpp  UserTable.hpp
src/ServerConnections/: ServerConnection.hpp
src/Servers/: Server.hpp
test/: manual_test_orm.cpp  test_main.cpp
